# defi-terminal

./: .gitignore  README.md  home.py  pyproject.toml
modules/: classifier.py  smartwallet.py
notebooks/: classifier.ipynb
output/: avg_trade_size.csv  labels.json  transactions.csv
pages/: BscLevel.py  EthUniswapV3ETHUSDT.py
